maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: type mismatch;
 found   : Unit
 required: Array[Int]
  for (x <- 0 to xMax) {
         ^